--- a/src/main/resources/templates/user/user_select.html
+++ b/src/main/resources/templates/user/user_select.html
@@ -34,20 +34,14 @@
   <h1>Elija con qué tipo de usuario desea ingresar</h1>
   
   <div class="rectangle">
-    <div class="rectangle-content">Administrador</div>
+    <a class="rectangle-content" href="/user/admin" style="text-decoration: none;">Administrador</a>
   </div>
   
   <div class="rectangle">
-    <div class="rectangle-content">Auditor</div>
+	<a class="rectangle-content" href="/user/auditor" style="text-decoration: none;">Auditor</a>
   </div>
   
   <script>
-    var rectangles = document.querySelectorAll(".rectangle");
-    
-    for (var i = 0; i < rectangles.length; i++) {
-      rectangles[i].addEventListener("click", function() {
-      });
-    }
   </script>
 </body>
 </html>
