--- a/src/main/resources/templates/sensor_basura/index.html
+++ b/src/main/resources/templates/sensor_basura/index.html
@@ -99,7 +99,6 @@
 				  <th>Id Dispositivo</th>
 				  <th>Descripcion</th>
 				  <th>Fecha y Hora</th>
-				  <th>Dispositivo</th>
 			  </tr>
 		  </thead>
 		  <tbody>
@@ -107,7 +106,6 @@
 				  <td><span th:text="${e.id}" /></td>
 				  <td><span th:text="${e.dispositivo.id}" /></td>
 				  <td><span th:text="${e.descripcion}"/></td>
-				  <td><span th:text="${e.fechaHora}" /></td>
-				  <td><span th:text="${e.dispositivo.nombre}"></td>
+				  <td><span th:text="${#temporals.format(e.fechaHora, 'dd-MM-yyyy HH:mm')}" /></td>
 		  </tbody>
 </table>
