Añadidos hipervinculos para llegar a eventos y a sensor basura desde admin

--- a/src/main/resources/templates/user/admin.html
+++ b/src/main/resources/templates/user/admin.html
@@ -1,1 +1,28 @@
-Esta es la vista de el administrador
+<style>
+    body {
+      text-align: left;
+      font-family: Arial, sans-serif;
+    }
+
+    .link-container {
+      display: inline-block;
+      margin-top: 20px;
+      border: 2px solid red;
+      border-radius: 5px;
+      padding: 10px;
+    }
+
+    .link-container a {
+      color: red;
+      text-decoration: none;
+    }
+  </style>
+  <h1>Administrar dispositivos</h1>
+  <div class="link-container">
+<font size="3px"><a href="/sensor_basura" style="text-decoration: none;">Sensores de Basura</a></font>
+  </div>
+  <h1>Ver eventos</h1>
+  <div class="link-container">
+<font size="2px"><a href="/eventos" style="text-decoration: none;">Eventos</a></font>
+  </div>
+  
