añadida navegación entre vistas

--- a/src/main/resources/templates/user/admin.html
+++ b/src/main/resources/templates/user/admin.html
@@ -21,8 +21,9 @@
   <div class="link-container">
 <font size="3px"><a href="/sensor_basura" style="text-decoration: none;">Sensores de Basura</a></font>
   </div>
-  <h1>Ver eventos</h1>
   <div class="link-container">
-<font size="2px"><a href="/eventos" style="text-decoration: none;">Eventos</a></font>
+<font size="3px"><a href="/sensor_temperatura" style="text-decoration: none;">Sensores de Temperatura</a></font>
   </div>
-  
+  <div class="link-container">
+<font size="3px"><a href="/sensor_luces" style="text-decoration: none;">Sensores de Luces</a></font>
+  </div>  
