--- a/src/main/resources/templates/user/auditor.html
+++ b/src/main/resources/templates/user/auditor.html
@@ -1,1 +1,23 @@
-Esta es la vista de el auditor
+<style>
+    body {
+      text-align: left;
+      font-family: Arial, sans-serif;
+    }
+
+    .link-container {
+      display: inline-block;
+      margin-top: 20px;
+      border: 2px solid red;
+      border-radius: 5px;
+      padding: 10px;
+    }
+
+    .link-container a {
+      color: red;
+      text-decoration: none;
+    }
+  </style>
+<h1>Ver eventos</h1>
+  <div class="link-container">
+<font size="2px"><a href="/eventos" style="text-decoration: none;">Reportes</a></font>
+  </div>
