actualizada navegación entre vistas

--- a/src/main/resources/templates/eventos/filtro/estado_dispositivo.html
+++ b/src/main/resources/templates/eventos/filtro/estado_dispositivo.html
@@ -4,7 +4,23 @@
       text-align: left;
       font-family: Arial, sans-serif;
     }
+
+    .link-container {
+      display: inline-block;
+      margin-top: 20px;
+      border: 2px solid red;
+      border-radius: 5px;
+      padding: 10px;
+    }
+
+    .link-container a {
+      color: red;
+      text-decoration: none;
+    }
   </style>
+  <div class="link-container">
+<font size="2px"><a href="/eventos" style="text-decoration: none;">Volver</a></font>
+  </div>
 <table border="1px">
 		  <thead>
 			  
