--- a/src/main/resources/templates/sensor_basura/index.html
+++ b/src/main/resources/templates/sensor_basura/index.html
@@ -19,6 +19,9 @@
     }
   </style>
   <div class="link-container">
+<font size="2px"><a href="/user/admin" style="text-decoration: none;">Volver</a></font>
+  </div>
+  <div class="link-container">
 <font size="5px"><a href="/sensor_basura/nuevo" style="text-decoration: none;">Añadir sensor</a></font>
   </div>
   <div class="link-container">
