--- a/src/main/resources/templates/sensor_basura/eventos.html
+++ b/src/main/resources/templates/sensor_basura/eventos.html
@@ -1,3 +1,25 @@
+<style>
+    body {
+      text-align: left;
+      font-family: Arial, sans-serif;
+    }
+
+    .link-container {
+      display: inline-block;
+      margin-top: 20px;
+      border: 2px solid red;
+      border-radius: 5px;
+      padding: 10px;
+    }
+
+    .link-container a {
+      color: red;
+      text-decoration: none;
+    }
+  </style>
+  <div class="link-container">
+<font size="2px"><a href="/sensor_basura" style="text-decoration: none;">Volver</a></font>
+  </div>
 <table border="1px">
 		  <thead>
 			  
