--- a/src/main/resources/templates/user/admin.html
+++ b/src/main/resources/templates/user/admin.html
@@ -17,6 +17,9 @@
       text-decoration: none;
     }
   </style>
+  <div class="link-container">
+<font size="2px"><a href="/" style="text-decoration: none;">Home</a></font>
+  </div>
   <h1>Administrar dispositivos</h1>
   <div class="link-container">
 <font size="3px"><a href="/sensor_basura" style="text-decoration: none;">Sensores de Basura</a></font>
